store RunConfig<->AntTarget associations inside RunManager

--- a/plugins/ant/src/META-INF/plugin.xml
+++ b/plugins/ant/src/META-INF/plugin.xml
@@ -15,9 +15,8 @@
 
     <errorHandler implementation="com.intellij.diagnostic.ITNReporter"/>
     <renameHandler implementation="com.intellij.lang.ant.refactoring.AntRenameHandler"/>
-    <stepsBeforeRunProvider implementation="com.intellij.lang.ant.config.impl.AntStepsBeforeRunProvider"/>
-    <packaging.artifactPropertiesProvider implementation="com.intellij.lang.ant.config.impl.AntArtifactPostprocessingPropertiesProvider"/>
-    <keymapExtension implementation="com.intellij.lang.ant.config.impl.AntKeymapExtension"/>
+    <stepsBeforeRunProvider implementation="com.intellij.lang.ant.config.impl.AntBeforeRunTaskProvider"/>
+    <packaging.artifactPropertiesProvider implementation="com.intellij.lang.ant.config.impl.AntArtifactPostprocessingPropertiesProvider"/>    <keymapExtension implementation="com.intellij.lang.ant.config.impl.AntKeymapExtension"/>
     <extendWordSelectionHandler implementation="com.intellij.lang.ant.AntPropertyRefSelectioner"/>
     <annotator language="ANT" implementationClass="com.intellij.lang.ant.validation.AntAnnotator"/>
     <lang.documentationProvider language="ANT" implementationClass="com.intellij.lang.ant.doc.AntDocumentationProvider"/>
