--- a/resources_eng/src/messages/AntBundle.properties
+++ b/resources_eng/src/messages/AntBundle.properties
@@ -167,7 +167,7 @@ intention.create.target.family.name=Create target
 intention.create.property.family.name=Create property
 intention.create.macrodef.family.name=Create macrodef
 intention.create.presetdef.family.name=Create presetdef
-run.ant.target.step.before.run=Run Ant target
+ant.target.before.run.description=Run Ant target ''{0}''
 ant.target.choser.title=Choose Ant Target to Execute
 please.specify.a.property=Please set a property here
 failed.to.load.types=Failed to load type(s)
