Maven: settings improvements

--- a/plugins/maven/src/main/resources/ProjectBundle.properties
+++ b/plugins/maven/src/main/resources/ProjectBundle.properties
@@ -13,9 +13,6 @@ maven.updating.folders.pom=Generating sources for {0}
 maven.transfer.progress={0}/{1}K  [{2}] {3}
 maven.transfer.start=Checking [{0}] {1}
 
-maven.advanced.button.name=&Advanced...
-maven.paths.configurable.name=Maven installation paths
-
 maven.project.pom.file.has.been.changed=The pom.xml has been changed.
 
 maven.project.import=Import
@@ -32,9 +29,11 @@ maven.downloading.plugins=Downloading plugins
 
 module.group.name={0} and modules
 
-maven.import.label.select.root=&Select root directory:
+maven.import.label.select.root=&Root directory
 maven.import.title.select.root=Select root directory
-maven.import.title.module.dir=Select directory for IDEA module (.iml) files
+maven.import.environment.settings=&Environment settings...
+maven.import.environment.settings.title=Maven environment
+maven.import.title.module.dir=Select directory for IDEA module files (*.iml)
 
 maven.import.message.delete.obsolete=These modules have been removed from maven structure:\n{0}\n\nDo you want them to be removed from the project too?
 maven.navigator.nothing.to.display=<html><center>There are no Maven projects to display.<br><br>\
@@ -49,7 +48,7 @@ maven.download.never=Never
 maven.download.ondemand=On demand
 maven.download.always=On import
 
-maven.tab.ignore=Ignored files
+maven.tab.ignored.files=Ignored Files
 maven.ignore=Ignore
 maven.unignore=Unignore
 maven.ignore.edit=Edit ignore settings...
