--- a/plugins/maven/src/main/resources/RunnerBundle.properties
+++ b/plugins/maven/src/main/resources/RunnerBundle.properties
@@ -32,6 +32,6 @@ maven.java.not.found=Cannot find JRE ''{0}''
 maven.run.configuration.name=Maven
 maven.run.configuration.description=Maven build
 maven.select.maven.project.file=Select Maven project file
-maven.tab.project=Project
+maven.runner.parameters.title=Parameters
 
 maven.run.configuration.error.file.not.found=pom.xml not found in the specified working directory.
