--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -67,7 +67,7 @@ cannot.compile.groovy.files.no.facet=Cannot find Groovy home for module ''{0}''.
 cannot.compile.groovy.files.no.sdk=Cannot Compile Groovy Files.\nPlease Set up SDK for module ''{0}''.
 cannot.compile.groovy.files.no.sdk.mult=Cannot Compile Groovy Files.\nPlease Set up SDK for modules ''{0}''.
 cannot.compile=Cannot Compile
-debug.option=Enable debug stacktrace
+debug.option=Enable &debug stacktrace
 groovy.debug.disable.specific.methods=Do not step &into specific Groovy classes
 groovy.debug.caption=Groovy
 
