--- a/resources_eng/src/messages/AntBundle.properties
+++ b/resources_eng/src/messages/AntBundle.properties
@@ -168,6 +168,7 @@ intention.create.property.family.name=Create property
 intention.create.macrodef.family.name=Create macrodef
 intention.create.presetdef.family.name=Create presetdef
 ant.target.before.run.description=Run Ant target ''{0}''
+ant.target.before.run.description.empty=Run Ant target
 ant.target.choser.title=Choose Ant Target to Execute
 please.specify.a.property=Please set a property here
 failed.to.load.types=Failed to load type(s)
