appearance settings: "show window mnemonics" renamed to "show tool-window numbers" + paint bg for split toolwindow buttons (eg Structure)

--- a/platform-resources_eng/src/messages/IdeBundle.properties
+++ b/platform-resources_eng/src/messages/IdeBundle.properties
@@ -632,7 +632,7 @@ group.window.options= Window Options
 checkox.show.buttons.for.disabled.tool.windows=Show buttons for disabled tool windows
 checkbox.show.memory.indicator=Show memory indicator
 checkbox.show.tool.window.bars=Show tool window bars
-checkbox.show.window.mnemonics=Show window mnemonics
+checkbox.show.tool.window.numbers=Show tool window numbers
 checkbox.animate.windows=Animate windows
 group.transparency= Transparency
 checkbox.use.transparent.mode.for.floating.windows=Use transparent mode for floating windows
