--- a/plugins/maven/src/main/resources/TasksBundle.properties
+++ b/plugins/maven/src/main/resources/TasksBundle.properties
@@ -1,11 +1,10 @@
-maven.event.before.run=Run Maven Goal
-maven.event.select.goal.title=Select Maven Goal
+maven.tasks.before.run=Run Maven Goal ''{0}''
+maven.tasks.before.run.action=Execute Goal Before Run/Debug
+maven.tasks.goal.before.compile=Before Make
+maven.tasks.goal.after.compile=After Make
+maven.tasks.goal.before.run=Before Run
 
-maven.event.action.group.name=Maven Goals
-maven.event.executing=Executing Maven Goal
+maven.tasks.select.goal.title=Select Maven Goal
+maven.tasks.action.group.name=Maven Goals
 
-maven.event.execute.before.run.debug=Execute Goal Before Run/Debug
-maven.event.text.before.make=Before Make
-maven.event.text.after.make=After Make
-maven.event.text.before.run=Before Run
-execute.before.launch.steps.title=Processing Maven goals before launch
+maven.tasks.executing=Executing Maven Goal
