inspection/quickfix for missing inspection html-descriptions

--- a/plugins/devkit/src/DevKitBundle.properties
+++ b/plugins/devkit/src/DevKitBundle.properties
@@ -161,3 +161,5 @@ no.idea.sdk.version.found=Failed to detect JDK version required for IDEA JDK.
 group.PluginDeployActions.text=Plugin Deployment Actions
 
 error.cannot.resolve.plugin=Cannot resolve plugin {0}
+create.description.file=Create Description File
+select.target.location.of.description=Select target location of {0}
