--- a/resources_eng/src/messages/QuickFixBundle.properties
+++ b/resources_eng/src/messages/QuickFixBundle.properties
@@ -163,9 +163,9 @@ fix.super.method.return.type.family=Fix Super Method Return Type
 fix.super.method.return.type.text=Make ''{0}'' return ''{1}''
 surround.with.try.catch.fix=Surround with try/catch
 make.final.family=Make Final
-make.final.text=Make ''{0}'' final
+make.final.text=Make {0} final
 make.final.copy.to.temp=Copy ''{0}'' to temp final variable
-make.final.transform.to.one.element.array=Transform ''{0}'' into final one element array
+make.final.transform.to.one.element.array=Transform {0} into final one element array
 fix.variable.type.family=Fix Variable Type
 fix.variable.type.text=Change ''{0}'' type to ''{1}''
 
