new class actions rework

--- a/platform-resources_eng/src/messages/ActionsBundle.properties
+++ b/platform-resources_eng/src/messages/ActionsBundle.properties
@@ -161,10 +161,7 @@ action.Compare.SameVersion.text=Compare with the Same Repositor_y Version
 action.Compare.LastVersion.text=Compare with Latest Repository _Version
 action.Compare.Selected.text=_Compare with...
 group.NewGroup.text=_New
-action.NewClass.text=Class
-action.NewInterface.text=Interface
-action.NewEnum.text=Enum
-action.NewAnnotationType.text=@Interface
+action.NewClass.text=Java Class
 action.NewFile.text=File
 action.NewDir.text=Directory/Package
 action.NewFromTemplate.text=From Template
