integrate from RubyMine10: underscoresToSpaces macro

--- a/platform-resources_eng/src/messages/CodeInsightBundle.properties
+++ b/platform-resources_eng/src/messages/CodeInsightBundle.properties
@@ -308,6 +308,7 @@ macro.component.type.of.array=componentTypeOf(Array)
 macro.current.package=currentPackage()
 macro.decapitalize.string=decapitalize(String)
 macro.firstWord.string=firstWord(String)
+macro.undescoresToSpaces.string=underscoresToSpaces(String)
 macro.descendant.classes.enum=descendantClassesEnum(String)
 macro.enum=enum(...)
 macro.expected.type=expectedType()
