integrate from RubyMine10: javadoc -> documentation

--- a/platform-resources_eng/src/messages/FeatureStatisticsBundle.properties
+++ b/platform-resources_eng/src/messages/FeatureStatisticsBundle.properties
@@ -62,7 +62,7 @@ codeassists.quickdefinition=Quick Definition lookup
 codeassists.quickdefinition.lookup=Quick Definition in lookup lists
 codeassists.quickjavadoc.lookup=Quick Documentation in lookups
 codeassists.quickjavadoc.ctrln=Quick Documentation in goto class or symbol
-codeassists.javadoc.external=Browse external javadoc
+codeassists.javadoc.external=Browse external documentation
 codeassists.surroundwith.statement=Surround statements with
 codeassists.surroundwith.expression=Surround expression with
 codeassists.comment.block=Comment/Uncomment block
