integrate from RubyMine10: correct product name in tooltip

--- a/platform-resources_eng/src/messages/IdeBundle.properties
+++ b/platform-resources_eng/src/messages/IdeBundle.properties
@@ -1037,7 +1037,7 @@ share.scope.checkbox.title=Share scope
 bean.property=Bean Property
 plugin.manager.enable.column.title=Enable
 plugin.manager.tooltip.warning=Required plugin ''{0}'' is not included
-plugin.manager.incompatible.tooltip.warning=Plugin is incompatible with current IntelliJ IDEA installation
+plugin.manager.incompatible.tooltip.warning=Plugin is incompatible with current {0} installation
 #new wizard components
 project.new.wizard.project.identification=project
 project.new.wizard.module.identification=module
