integrate from RubyMine10: SMRunner messages

--- a/platform-resources_eng/src/messages/SMTestsRunnerBundle.properties
+++ b/platform-resources_eng/src/messages/SMTestsRunnerBundle.properties
@@ -6,6 +6,7 @@ sm.test.runner.ui.tests.tree.presentation.labels.done=Done:
 sm.test.runner.ui.tests.tree.presentation.labels.of=of
 sm.test.runner.ui.tests.tree.presentation.labels.failed=Failed:
 sm.test.runner.ui.tests.tree.presentation.labels.seconds=s
+sm.test.runner.ui.tests.tree.presentation.labels.milliseconds=ms
 sm.test.runner.ui.tests.tree.presentation.labels.running.tests=Running tests...
 sm.test.runner.ui.tests.tree.presentation.labels.test.results=Test Results:
 sm.test.runner.ui.tests.tree.presentation.labels.instantiating.tests=Instantiating tests...
@@ -40,4 +41,4 @@ sm.test.runner.magnitude.assertion.failed.title=Assertion failed
 sm.test.runner.magnitude.testerror.title=Error
 
 sm.test.runner.states.suite.is.empty=Empty test suite.
-sm.test.runner.states.test.is.ignored=Test ignored:
+sm.test.runner.states.test.is.ignored=Test ignored.
