integrate from RubyMine10: console colors and default TODO attributes

--- a/platform-resources_eng/src/messages/OptionsBundle.properties
+++ b/platform-resources_eng/src/messages/OptionsBundle.properties
@@ -119,6 +119,14 @@ options.general.color.descriptor.folding.outline=Folding outline
 options.general.color.descriptor.selected.folding.outline=Selected folding outline
 options.general.color.descriptor.added.lines=Added lines
 options.general.color.descriptor.modified.lines=Modified lines
+options.general.color.descriptor.console.background=Console background
+options.general.color.descriptor.console.stdout=Console standard output
+options.general.color.descriptor.console.stderr=Console error output
+options.general.color.descriptor.console.stdin=Console user input
+options.general.color.descriptor.console.system.output=Console system output
+options.general.color.descriptor.hyperlink.new=Hyperlink
+options.general.color.descriptor.hyperlink.followed=Followed hyperlink
+options.general.color.descriptor.todo.defaults=TODO defaults
 options.java.color.descriptor.full.coverage=Full line coverage
 options.java.color.descriptor.partial.coverage=Partial line coverage
 options.java.color.descriptor.none.coverage=Uncovered line
