--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -120,6 +120,7 @@ replace.concatenation.with.format.string.intention.family.name=Replace String Co
 copy.concatenated.string.to.clipboard.intention.name=Copy String concatenation text to the clipboard
 copy.concatenated.string.to.clipboard.intention.family.name=Copy String Concatenation Text to the Clipboard
 flip.expression.intention.family.name=Flip Binary Expression
+flip.setter.call.intention.family.name=Flip Setter Call
 
 #hand made
 demorgans.intention.name1=Replace '\\&\\&' with '||'
@@ -147,6 +148,7 @@ replace.assignment.with.operator.assignment.intention.name=Replace ''='' with ''
 replace.operator.assignment.with.assignment.intention.name=Replace ''{0}'' with ''=''
 replace.some.operator.with.other.intention.name=Replace ''{0}'' with ''{1}''
 swap.method.call.arguments.intention.name=Swap ''{0}'' and ''{1}''
+flip.setter.call.intention.name=Flip Setter Call
 
 #categories
 intention.category.numbers=Numbers
