--- a/platform-resources_eng/src/messages/IdeBundle.properties
+++ b/platform-resources_eng/src/messages/IdeBundle.properties
@@ -234,10 +234,10 @@ select.in.project=Project
 select.in.nav.bar = Navigation Bar
 error.adding.module.to.project=Error adding module to project: {0}
 title.add.module=Add Module
-prompt.open.project.in.new.frame=<html><body>New projects can either be opened in a new frame or replace the project in the existing frame.<br>How would you like to open the project?</body></html>?
+prompt.open.project.in.new.frame=<html><body>New projects can either be opened in a new window or replace the project in the existing window.<br>How would you like to open the project?</body></html>?
 title.new.project=New Project
-button.newframe=New &Frame
-button.existingframe=&This Frame
+button.newframe=New &Window
+button.existingframe=&This Window
 button.yes=_Yes
 button.no=_No
 error.project.file.does.not.exist=Cannot load {0}. The file does not exist.
