clearer action names

--- a/platform-resources_eng/src/messages/ActionsBundle.properties
+++ b/platform-resources_eng/src/messages/ActionsBundle.properties
@@ -668,13 +668,13 @@ action.StoreDefaultLayout.text=Store Current La_yout as Default
 action.StoreDefaultLayout.description=Store current layout as default
 action.RestoreDefaultLayout.text=Restore De_fault Layout
 action.RestoreDefaultLayout.description=Restore default layout
-action.HideActiveWindow.text=Hi_de Active Window
+action.HideActiveWindow.text=Hi_de Active Tool Window
 action.HideActiveWindow.description=Hide active tool window
-action.HideSideWindows.text=Hide Side Windows
+action.HideSideWindows.text=Hide Side Tool Windows
 action.HideSideWindows.description=Hide all windows on this side
-action.HideAllWindows.text=Hide All _Windows
+action.HideAllWindows.text=Hide All _Tool Windows
 action.HideAllWindows.description=Hide all tool windows
-action.JumpToLastWindow.text=_Jump to Last Window
+action.JumpToLastWindow.text=_Jump to Last Tool Window
 action.JumpToLastWindow.description=Activate last focused tool window
 action.TogglePinnedMode.text=_Pinned Mode
 action.TogglePinnedMode.description=Pin/unpin active tool window
